# k8s-qa-rag-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-integration-proof/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-security-boundaries/: 02-01-PLAN.md  02-01-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/tmp/: verify-README.md.json
docs/: API.md  DESIGN.md  IMPLEMENTATION.md  LOCAL-DEV.md  OPERATIONS.md  PHASE1-RUNBOOK.md  RELEASE.md  SECURITY-SECRETS.md  TROUBLESHOOTING.md
docs/plans/: 2026-05-11-populate-services-and-docs-design.md  2026-05-11-populate-services-and-docs.md
k8s/base/: configmap-otel.yaml  elasticsearch-deployment.yaml  git-watcher-deployment.yaml  indexer-batch-configmap.yaml  indexer-cronjob.yaml  indexer-deployment.yaml  indexer-service.yaml  kustomization.yaml  namespace.yaml  qa-agent-deployment.yaml  qdrant-service.yaml  qdrant-statefulset.yaml  redis-deployment.yaml  retriever-deployment.yaml
k8s_qa_rag_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: smoke_compose.sh  validate-otel-config.sh
scripts/otel/: otel-collector-config.yaml
services/: __init__.py
services/common/: __init__.py  observability.py
services/git-watcher/: Dockerfile  build.gradle.kts  settings.gradle.kts
services/indexer/: Dockerfile  __init__.py  batch_index.py  chunker.py  embeddings.py  git_client.py  main.py  models.py  repo_allowlist.py  text_search.py  vector_db.py
services/qa_agent/: Dockerfile  __init__.py  agent.py  llm.py  main.py  models.py  requirements.txt  state.py  tools.py
services/retriever/: Dockerfile  __init__.py  bm25_search.py  cache.py  dense_search.py  main.py  models.py  reranker.py
tests/: test_citations_from_tools.py  test_correlation_id.py  test_git_client_file_url.py  test_imports.py  test_integration_compose_optional.py  test_repo_allowlist.py
(+65 files in other folders)
