[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-qa-rag-agent"
version = "0.1.0"
description = "Kubernetes-native RAG system for live codebase Q&A"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Terence Schumacher", email = "terenceschumacher@gmail.com" }
]

dependencies = [
    # FastAPI & Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # LLM & Embeddings
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.20",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0",

    # Vector & Search
    "qdrant-client>=1.7.0",
    "elasticsearch>=8.10.0",
    "redis>=5.0.0",

    # Code Parsing & Processing
    "tree-sitter>=0.20.0",
    "tiktoken>=0.5.0",
    "gitpython>=3.1.0",

    # HTTP & Async
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",

    # Observability
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",

    # Logging & Monitoring
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.19.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=services --cov-report=html --cov-report=term"
markers = [
    "integration: requires docker compose stack (set RUN_COMPOSE_INTEGRATION=1)",
]
